# data-api-stac

./: .gitignore  Dockerfile  Pipfile  README.md  lambda.py  pyproject.toml  requirements.txt  setup.py
data_api_stac/: constants.py  data_api_catalog.py  globals.py  raster_objects.py  tabular_objects.py
notebooks/: create_STAC_catalog.ipynb
src/: constants.py  data_api_catalog.py  dataset_collection.py  globals.py  raster_objects.py  tabular_objects.py
terraform/: data.tf  iam.tf  locals.tf  main.tf  outputs.tf  terraform.tfplan  variables.tf
terraform/policies/: data_api_stac.json
terraform/vars/: terraform-dev.tfvars  terraform-production.tfvars  terraform-staging.tfvars
