[tool.poetry]
name = "data-api-stac"
description = "Tool to create STAC catalog for Data API datasets"
version = "0.1.0"
license = "MIT"

authors = ["WRI Data Lab"]

repository = "https://github.com/wri/data-api-stac"
packages = [{include = "data_api_stac"}]

[tool.poetry.dependencies]
python = ">=3.8,<4"

boto3 = "^1.22.7"
click = "^8.1"
pandas = "^1.4"
pystac = "^1.2"
pystac-client = "^0.3"
stac-validator = "^3.0"
